[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-futures-clients"
version = "0.1.5"
description = "Async futures exchange clients for Bybit and Binance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "aiolimiter",
    "pandas",
    "pydantic>=2",
    "websockets==16.0",
]

[tool.setuptools]
py-modules = [
    "base",
    "base_async_exchange_api",
    "exceptions",
    "async_bybit_api",
    "async_bybit_websocket",
    "async_bybit_client",
    "async_binance_api",
    "async_binance_websocket",
    "async_binance_client",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clients*"]
